<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">中国物连网</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">建设中!</string>
    <string name="title_activity_startup">StartupActivity</string>
    <string name="prompt_email">手机号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in_register"><b>登陆</b></string>
    <string name="action_sign_in_short">登陆</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">登录中……&#8230;</string>
    <string name="error_invalid_email">手机号不符合规范，请重新输入</string>
    <string name="error_invalid_password">密码过短（请输入大于4位的密码）</string>
    <string name="error_incorrect_password">用户名/密码错误</string>
    <string name="error_field_required">必填信息</string>
    <string name="error_field_mismatch">两次输入密码不一至，请重新输入</string>
    <string name="rememberPWD">记住密码</string>
    <string name="autoLogin">自动登录</string>
    <string name="settings">系统设置</string>
    <string name="regist">注册</string>
    <string name="title_activity_member_center">MemberCenterActivity</string>
    <string name="title_activity_myinfo">MyinfoActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_navi">NaviActivity</string>
    <string name="title_activity_toolbox">ToolboxActivity</string>
    <string name="title_activity_xxcx">XxcxActivity</string>
    <string name="title_activity_zcy">ZcyActivity</string>
    <string name="title_activity_zhy">ZhyActivity</string>
    <string name="title_activity_fbhy">FbhyActivity</string>
    <string name="title_activity_fbcy">FbcyActivity</string>
    <string name="title_activity_main_tab">MainTabActivity</string>
    <string name="home">主页</string>
    <string name="myinfo">我的信息</string>
    <string name="membercenter">会员中心</string>
    <string name="help">帮助</string>
    <string name="border_top">border_top</string>
    <string name="border_bottom">border_bottom</string>
    <string name="image_url">image_url</string>
    <string name="aboutus">  中国物连网自成立以来，始终致力于缔造全球最专业的中文网上物流园，为所有需要物流和提供物流的客户，搭建了一个物流信息发布和交流的平台，真正实现“客户零见面，交易更方便”的网上轻松交易理念。\n
　　中国物连网是现代物流管理的网络资讯平台，既是实现规范化管理和业务操作的资讯系统，也是为物流客户、联盟伙伴、物流资源等提供连接、管理和服务的门户。它将现代物流管理模式和先进的资讯技术有机结合，建立全新的以客户服务为中心的经营体系，创造企业在网络环境下的竞争优势，打造以现代综合物流服务为主体的供应链。\n
　　中国物连网每天为会员提供最新的物流供求信息、货盘信息、报价信息、货运专线、企业库和物流资讯。物流企业和货主企业通过信息发布和交流，让更多的物流供需双方轻松找到对方，为物流企业和货主企业提供了高效率、低成本的 物流服务。各种货盘信息、海运、综合物流、仓储、商检报关及快递等分类物流信息，实现资源共享，促使物流与货源的有效配对，为企业创造更多商机、更多财富。\n
　　加入中国物连网，充分享用互联网资源，体验真正意义上的物流和商贸的互动，实现市场扩展和利润增长。</string>

    <string-array name="bh_item">
        <item>不限</item>
        <item>本地车</item>
        <item>回程车</item>
    </string-array>
    <string-array name="ck_item">
        <item>不限</item>
        <item>好</item>
        <item>一般</item>
        <item>差</item>
    </string-array>
    <string-array name="cx_item">
        <item>不限</item>
        <item>厢式车</item>
        <item>挂车</item>
        <item>栏车</item>
        <item>铁笼车</item>
        <item>中型罐车</item>
        <item>起重车</item>
        <item>油罐车</item>
        <item>自卸车</item>
        <item>货车</item>
        <item>平板车</item>
        <item>冷藏车</item>
        <item>保温车</item>
        <item>其他车辆</item>
    </string-array>

    <string name="title_activity_pic_wall">PicWallActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

</resources>
