<com.hcwlw.InputMethodRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/loginpage"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/elogin" 
    tools:context=".LoginActivity" >

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_progress_signing_in"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <!-- qqLogin form -->
    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20.0dip"
        android:paddingRight="20.0dip" >
		<!-- 大logo -->
        <LinearLayout
            android:id="@id/login_logo_layout_v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25.0dip"
            android:layout_marginTop="40.0dip"
            android:orientation="vertical" >

            <ImageView
                android:id="@id/login_logoimg"
                android:layout_width="fill_parent"
                android:layout_height="60dip"
                android:adjustViewBounds="true"
                android:gravity="center"
                android:src="@drawable/logo" />

            <!-- <ImageView
                android:layout_width="125.0dip"
                android:layout_height="35.0dip"
                android:layout_marginTop="10.0dip"
                android:adjustViewBounds="true"
                android:gravity="center"
                android:src="@drawable/qz_icon_logo_word_login" /> -->
        </LinearLayout>
		<!-- 小LOGO -->
        <LinearLayout
            android:id="@id/login_logo_layout_h"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:layout_marginTop="10.0dip"
            android:gravity="left|center"
            android:orientation="horizontal"
            android:visibility="gone" >

            <ImageView
                android:layout_width="135.0dip"
                android:layout_height="42.0dip"
                android:adjustViewBounds="true"
                android:gravity="center"
                android:src="@drawable/logo" />

           <!--  <ImageView
                android:layout_width="93.0dip"
                android:layout_height="30.0dip"
                android:layout_marginLeft="5.0dip"
                android:adjustViewBounds="true"
                android:src="@drawable/qz_icon_logo_word_login" /> -->
        </LinearLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="45.0dip" >

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/qz_bg_container_cell_top_normal"
                android:hint="@string/prompt_email"
                android:inputType="phone"
                android:maxLength="50"
                android:paddingLeft="15.0dip"
                android:paddingRight="30.0dip"
                android:singleLine="true"
                android:text=""
                android:textColor="#ff000000"
                android:textColorHint="@color/darkgrey"
                android:textSize="16.0dip" />

            <ImageView
                android:id="@id/uin_close"
                android:layout_width="30.0dip"
                android:layout_height="45.0dip"
                android:layout_gravity="right|center"
                android:layout_marginRight="40.0dip"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:scaleType="center"
                android:src="@drawable/qz_icon_close"
                android:visibility="invisible" />

            <ImageView
                android:id="@id/selectId"
                android:layout_width="40.0dip"
                android:layout_height="45.0dip"
                android:layout_gravity="right|center"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:paddingLeft="5.0dip"
                android:paddingRight="15.0dip"
                android:scaleType="center"
                android:src="@drawable/qz_icon_navbar_drop_down" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="45.0dip" >

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="45.0dip"
                android:background="@drawable/qz_bg_container_cell_bottom_normal"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLength="16"
                android:paddingLeft="15.0dip"
                android:paddingRight="30.0dip"
                android:singleLine="true"
                android:textColor="#ff000000"
                android:textColorHint="#ffbbbbbb"
                android:textSize="16.0dip" />

            <ImageView
                android:id="@id/psw_close"
                android:layout_width="30.0dip"
                android:layout_height="45.0dip"
                android:layout_gravity="right|center"
                android:layout_marginRight="15.0dip"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:scaleType="center"
                android:src="@drawable/qz_icon_close"
                android:visibility="invisible" />
        </FrameLayout>
        
        	<LinearLayout 
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="45.0dip"
                android:paddingLeft="15.0dip"
        		android:paddingRight="15.0dip">
                <CheckBox 
                    android:id="@+id/cb_mima"
                    android:layout_width="0pt"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:button="@drawable/qz_selector_chkbox"
                    android:text="@string/rememberPWD"/>
                        <!-- <ImageButton
            android:layout_width="1.0px"
            android:layout_height="fill_parent"
            android:background="#ffcfcfcf" /> -->
                <CheckBox 
                    android:id="@+id/cb_auto" 
                    android:layout_width="0pt"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:button="@drawable/qz_selector_chkbox"
                    android:text="@string/autoLogin"/>
     </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
         android:orientation="vertical" >
        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:layout_marginTop="12.0dip"
            android:background="@drawable/qz_selector_login"
            android:textColor="#ffffffff"
            android:textSize="20.0dip" />
    <LinearLayout
        android:id="@id/reg_and_forget_password_layout"
        android:layout_width="fill_parent"
        android:layout_height="115.0dip"
        android:orientation="vertical" >

<!--         android:layout_alignParentBottom="true" -->
        <Button
            android:id="@+id/btn_main_settings"
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:autoLink="all"
            android:background="@drawable/qz_selector_set"
            android:gravity="center"
            android:layout_marginTop="12.0dip"
            android:text=""
            android:textColor="#ffffffff"
            android:textSize="14.0dip" />
        
        <Button
            android:id="@+id/reg_in_button"
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:autoLink="all"
            android:background="@drawable/qz_selector_reg"
            android:gravity="center"
            android:layout_marginTop="12.0dip"
            android:text=""
            android:textColor="#ffffffff"
            android:textSize="14.0dip" />
    </LinearLayout>
         </LinearLayout>
    </LinearLayout>




    <!-- Login form -->


</com.hcwlw.InputMethodRelativeLayout>
